--- a/index.html
+++ b/index.html
@@ -101,5 +101,8 @@ h1{
 本站仅提供第三方学习资源导航
 </div>
 
+<!-- ===== 聊天客服（Tidio） ===== -->
+<script src="//code.tidio.co/ktjlcoxli28eltd5srj1j2wcsedvlayd.js" async></script>
+
 </body>
 </html>
