--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ h1{
 本站仅提供第三方学习资源导航
 </div>
 
-<!-- ===== 聊天客服（Tidio） ===== -->
-<script src="//code.tidio.co/ktjlcoxli28eltd5srj1j2wcsedvlayd.js" async></script>
+<!-- ===== 客服代码（已替换） ===== -->
+<script src="https://w1022.ttkefu.com/k/?fid=1J9BJF1" charset="utf-8"></script>
 
 </body>
 </html>
