--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@ h1 {
 
 <div class="button-container">
     <a class="button button1" href="http://sujvf0nn.544u.cc">学习站点4</a>
-    <a class="button button2" https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75">学习站点5</a>
-    <a class="button button3" href="http://6e8e.cc"noopener">学习站点2</a>
+    <a class="button button2" href="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75">学习站点5</a>
+    <a class="button button3" href="http://6e8e.cc">学习站点2</a>
     <a class="button button4" href="http://IjaMWExiyP.e.haijiacp.com/?NXVsb&La=fqhjjqxcicvsqtddnu">学习站点3</a>
-    <a class="button button5" href="https://1busin-ebsoo-19cos.cyou" target="_blank" rel="noopener">勉费资料</a>
-    <a class="button button6" href="href="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh" target="_blank" rel="nofollow noopener noreferrer">学习站点1</a>
+    <a class="button button5" href="https://1busin-ebsoo-19cos.cyou">勉费资料</a>
+    <a class="button button6"href="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh">学习站点1</a>
 </div>
 
 <div id="popupOverlay" class="popup-overlay">
