--- a/index.html
+++ b/index.html
@@ -70,17 +70,16 @@ h1 {
 
 .button:hover { opacity: 1; }
 
-.button1 { background:#ADD8E6; box-shadow:0 0 8px rgba(255,255,255,.35); color:#000; }
-.button2 {
+.button1 { background:#6A5ACD; box-shadow:0 0 8px rgba(255,255,255,.35); color:#fff; }
+.button2 { background:#7B68EE; box-shadow:0 0 8px rgba(255,255,255,.35); color:#fff; }
+.button3 { background:#ADD8E6; box-shadow:0 0 8px rgba(255,255,255,.35); color:#000; }
+.button4 { background:#D2691E; box-shadow:0 0 8px rgba(255,255,255,.35); color:#fff; }
+.button5 { background:#DAA520; box-shadow:0 0 8px rgba(255,255,255,.35); color:#000; }
+.button6 {
     background-image: linear-gradient(135deg,#4B4B4B,#6B6B6B);
     box-shadow:0 0 8px rgba(255,255,255,.35);
     color:#fff;
 }
-.button3 { background:#6A5ACD; box-shadow:0 0 8px rgba(255,255,255,.35); color:#fff; }
-.button4 { background:#D2691E; box-shadow:0 0 8px rgba(255,255,255,.35); color:#fff; }
-.button5 { background:#DAA520; box-shadow:0 0 8px rgba(255,255,255,.35); color:#000; }
-.button6 { background:#7B68EE; box-shadow:0 0 8px rgba(255,255,255,.35); color:#fff; }
-
 
 .popup-overlay {
     display: none;
@@ -137,12 +136,12 @@ h1 {
 </p>
 
 <div class="button-container">
-    <a class="button button1" href="http://sujvf0nn.544u.cc">学习站点4</a>
-    <a class="button button2" href="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75">学习站点5</a>
-    <a class="button button3" href="http://6e8e.cc">学习站点2</a>
+    <a class="button button1" href="http://6e8e.cc">学习站点2</a>
+    <a class="button button2" href="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh">学习站点1</a>
+    <a class="button button3" href="http://sujvf0nn.544u.cc"noopener">学习站点4</a>
     <a class="button button4" href="http://IjaMWExiyP.e.haijiacp.com/?NXVsb&La=fqhjjqxcicvsqtddnu">学习站点3</a>
-    <a class="button button5" href="https://1busin-ebsoo-19cos.cyou">勉费资料</a>
-    <a class="button button6"href="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh">学习站点1</a>
+    <a class="button button5" href="https://1busin-ebsoo-19cos.cyou" target="_blank" rel="noopener">勉费资料</a>
+    <a class="button button6" href="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75" target="_blank" rel="nofollow noopener noreferrer">学习站点5</a>
 </div>
 
 <div id="popupOverlay" class="popup-overlay">
@@ -163,7 +162,35 @@ h1 {
         </button>
     </div>
 </div>
+<!-- ====== 客服按钮 & 弹窗 ====== -->
+<button id="chatBtn" style="
+  position: fixed;
+  right: 16px;
+  bottom: 16px;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background:#4f6cff;
+  color:#fff;
+  border:none;
+  font-size:24px;
+  cursor:pointer;
+  z-index:9999;
+">💬</button>
 
+<div id="chatBox" style="
+  display:none;
+  position: fixed;
+  right: 16px;
+  bottom: 80px;
+  width: 360px;
+  height: 480px;
+  border: 1px solid #ddd;
+  background:#fff;
+  z-index:9999;
+">
+  <iframe id="chatFrame" src="https://www.3bsfyi-gdhin-21ndk.cyou/test.html" style="width:100%; height:100%; border:none;"></iframe>
+</div>
 <script>
 window.addEventListener('load', function(){
     if (window.innerWidth <= 768 && !sessionStorage.getItem('popupShown')) {
@@ -173,6 +200,13 @@ window.addEventListener('load', function(){
         }, 1800);
     }
 });
+// ====== 客服按钮逻辑 ======
+const chatBtn = document.getElementById("chatBtn");
+const chatBox = document.getElementById("chatBox");
+
+chatBtn.onclick = () => {
+  chatBox.style.display = chatBox.style.display === "none" ? "block" : "none";
+};
 </script>
 
 </body>
