--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ h1 {
   font-size:24px;
   cursor:pointer;
   z-index:9999;
+  touch-action: manipulation;
 ">💬</button>
 
 <div id="chatBox" style="
